sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.error
AlgCocktailSort3:7: error: not found: value enOrdre
  while (enOrdre){
         ^